SASS cancelled. uuriin beldsen minifier ashiglahaar tohiruulj turshiv. yavaandaa cache tai bolgono.

--- a/core/app/mbm/css/style.scss
+++ b/core/app/mbm/css/style.scss
@@ -9,4 +9,4 @@
 @import '../../system/modules/*/css/*';
 @import '../../default/modules/*/css/*';
 
-@import url('main.css');
+@import url('../../main.css');
