FPBC ustgalaa.. uuriin form iig ashiglana.. beldsen bgaa.

--- a/web/assets/flatlab/admin/css/style.css
+++ b/web/assets/flatlab/admin/css/style.css
@@ -434,7 +434,7 @@ ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
     .dropdown-menu.extended  {
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.176) !important;
     };
-    }
+}
 
 .dropdown-menu.extended li p {
     background-color: #F1F2F7;
@@ -1397,7 +1397,7 @@ h3.timeline-title {
     .panel-footer.revenue-foot {
         margin-bottom: -4px;
     };
-    }
+}
 
 
 .panel-footer.revenue-foot ul  {
@@ -3443,6 +3443,7 @@ table.sliders tr td {
     line-height: 20px;
     padding-bottom: 7px;
     font-weight: 300;
+    min-height: 30px;
 }
 
 .radios {
