--- a/web/assets/flatlab/admin/assets/bootstrap-switch/static/stylesheets/flat-ui-fonts.css
+++ b/web/assets/flatlab/admin/assets/bootstrap-switch/static/stylesheets/flat-ui-fonts.css
@@ -1,20 +1,20 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700,700italic,900,400italic,300");
+/*@import url("https://fonts.googleapis.com/css?family=Lato:400,700,700italic,900,400italic,300");*/
 @font-face {
-  font-family: 'Flat-UI-Icons';
-  src: url('../fonts/Flat-UI-Icons.eot');
-  src: url('../fonts/Flat-UI-Icons.eot?#iefix') format('embedded-opentype'), url('../fonts/Flat-UI-Icons.woff') format('woff'), url('../fonts/Flat-UI-Icons.ttf') format('truetype'), url('../fonts/Flat-UI-Icons.svg#Flat-UI-Icons') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'Flat-UI-Icons';
+    src: url('../fonts/Flat-UI-Icons.eot');
+    src: url('../fonts/Flat-UI-Icons.eot?#iefix') format('embedded-opentype'), url('../fonts/Flat-UI-Icons.woff') format('woff'), url('../fonts/Flat-UI-Icons.ttf') format('truetype'), url('../fonts/Flat-UI-Icons.svg#Flat-UI-Icons') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
-  font-family: 'Flat-UI-Icons';
-  content: attr(data-icon);
-  speak: none;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  -webkit-font-smoothing: antialiased;
+    font-family: 'Flat-UI-Icons';
+    content: attr(data-icon);
+    speak: none;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
 }
 /* Use the following CSS code if you want to have a class per icon */
 /*
@@ -52,102 +52,102 @@ you can use the generic selector below, but it's slower:
 .fui-pause,
 .fui-play,
 .fui-check-inverted-2 {
-  display: inline-block;
-  font-family: 'Flat-UI-Icons';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-family: 'Flat-UI-Icons';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
 }
 .fui-arrow-right:before {
-  content: "\e02c";
+    content: "\e02c";
 }
 .fui-arrow-left:before {
-  content: "\e02d";
+    content: "\e02d";
 }
 .fui-cmd:before {
-  content: "\e02f";
+    content: "\e02f";
 }
 .fui-check-inverted:before {
-  content: "\e006";
+    content: "\e006";
 }
 .fui-heart:before {
-  content: "\e007";
+    content: "\e007";
 }
 .fui-location:before {
-  content: "\e008";
+    content: "\e008";
 }
 .fui-plus:before {
-  content: "\e009";
+    content: "\e009";
 }
 .fui-check:before {
-  content: "\e00a";
+    content: "\e00a";
 }
 .fui-cross:before {
-  content: "\e00b";
+    content: "\e00b";
 }
 .fui-list:before {
-  content: "\e00c";
+    content: "\e00c";
 }
 .fui-new:before {
-  content: "\e00d";
+    content: "\e00d";
 }
 .fui-video:before {
-  content: "\e00e";
+    content: "\e00e";
 }
 .fui-photo:before {
-  content: "\e00f";
+    content: "\e00f";
 }
 .fui-volume:before {
-  content: "\e010";
+    content: "\e010";
 }
 .fui-time:before {
-  content: "\e011";
+    content: "\e011";
 }
 .fui-eye:before {
-  content: "\e012";
+    content: "\e012";
 }
 .fui-chat:before {
-  content: "\e013";
+    content: "\e013";
 }
 .fui-search:before {
-  content: "\e01c";
+    content: "\e01c";
 }
 .fui-user:before {
-  content: "\e01d";
+    content: "\e01d";
 }
 .fui-mail:before {
-  content: "\e01e";
+    content: "\e01e";
 }
 .fui-lock:before {
-  content: "\e01f";
+    content: "\e01f";
 }
 .fui-gear:before {
-  content: "\e024";
+    content: "\e024";
 }
 .fui-radio-unchecked:before {
-  content: "\e02b";
+    content: "\e02b";
 }
 .fui-radio-checked:before {
-  content: "\e032";
+    content: "\e032";
 }
 .fui-checkbox-unchecked:before {
-  content: "\e033";
+    content: "\e033";
 }
 .fui-checkbox-checked:before {
-  content: "\e034";
+    content: "\e034";
 }
 .fui-calendar-solid:before {
-  content: "\e022";
+    content: "\e022";
 }
 .fui-pause:before {
-  content: "\e03b";
+    content: "\e03b";
 }
 .fui-play:before {
-  content: "\e03c";
+    content: "\e03c";
 }
 .fui-check-inverted-2:before {
-  content: "\e000";
+    content: "\e000";
 }
