--- a/web/assets/flatlab/frontend/css/style.css
+++ b/web/assets/flatlab/frontend/css/style.css
@@ -156,12 +156,12 @@ p {line-height: 22px}
 }
 
 .header-frontend .nav li .dropdown-menu  {
-   padding: 0;
+    padding: 0;
 }
 
 .header-frontend .nav li .dropdown-menu li a {
-   line-height: 28px;
-   padding: 3px 12px;
+    line-height: 28px;
+    padding: 3px 12px;
 }
 
 
@@ -494,9 +494,9 @@ ul.about-flex-slides {
 
 .about-testimonial.boxed-style .about-testimonial-content:before {
     background-color: #e9e9e9;
-	border-right: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
     border-color: #f5f5f5;
-    border-image: none;   
+    border-image: none;
     border-style: none;
     top: -7px;
     content: "";
@@ -508,8 +508,8 @@ ul.about-flex-slides {
     -moz-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     width: 15px;
-	display:none\0/;
-	_display:none;
+    display:none;
+    _display:none;
 }
 
 
@@ -1543,9 +1543,9 @@ ul.tag li a {
     background-position: 25px 8px ;
 }
 
- .bx-wrapper .bx-next, .bx-wrapper .bx-next:hover {
+.bx-wrapper .bx-next, .bx-wrapper .bx-next:hover {
     background-position: 22px 8px;
- }
+}
 
 
 /*property*/
